# linpack_by_ed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  tex.yml
scripts/: install_mac.sh
src/: linpack.cpp  linpack.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gpu/cuda/: linpack_gpu.cu  linpack_gpu.h  matrix_multiply.cu
src/gpu/metal_osx/: gpu.metal  linpack_gpu.h  linpack_gpu.mm
